--- a/style.css
+++ b/style.css
@@ -82,6 +82,34 @@ a {
 
 .information {}
 
+.information > h2 {
+  font-size: 36px;
+  color: #1F2937;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.information .cards img {
+  width: 200px;
+  height: 200px;
+  border: 4px solid #3882F6;
+  border-radius: 15px;
+}
+
+.information .cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 18px;
+  text-align: center;
+}
+
+.information .cards > div {
+  width: 200px;
+}
+
+
 
 
 
