Add style to quote section

--- a/style.css
+++ b/style.css
@@ -116,7 +116,31 @@ a {
 
 .quote {
   background-color: #E5E7EB;
+  padding: 80px 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.quote .quote-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+
+.quote .text {
+  font-size: 36px;
+  font-style: italic;
+  color: #666;
+}
+
+.quote .author {
+  color: #1F2937;
+  font-weight: 700;
+  align-self: flex-end;
+}
+
 
 
 
